--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,80 @@
-asgiref==3.7.2
-backports.zoneinfo==0.2.1;python_version<"3.9"
-Django==4.2.10
-django-extensions==3.2.3
+absl-py==2.1.0
+annotated-types==0.7.0
+anyio==4.6.2.post1
+asgiref==3.8.1
+attrs==24.2.0
+cachetools==5.5.0
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.4.0
+colorama==0.4.6
+contourpy==1.3.0
+cycler==0.12.1
+distro==1.9.0
+Django==5.1.3
+django-filter==24.3
 djangorestframework==3.15.2
-sqlparse==0.4.4
-typing-extensions==4.9.0
-requests==2.32.3
 drf-yasg==1.21.8
+flatbuffers==24.3.25
+fonttools==4.53.1
+google-ai-generativelanguage==0.6.10
+google-api-core==2.23.0
+google-api-python-client==2.154.0
+google-auth==2.36.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.8.3
+googleapis-common-protos==1.66.0
+googlemaps==4.10.0
+gpio==1.0.0
+grpcio==1.68.1
+grpcio-status==1.68.1
+h11==0.14.0
+httpcore==1.0.6
+httplib2==0.22.0
+httpx==0.27.2
+idna==3.10
+inflection==0.5.1
+jax==0.4.33
+jaxlib==0.4.33
+jiter==0.7.0
+kiwisolver==1.4.7
+Markdown==3.7
+matplotlib==3.9.2
+mediapipe==0.10.10
+ml_dtypes==0.5.0
+numpy==2.1.1
+openai==1.54.3
+opencv-contrib-python==4.10.0.84
+opencv-python==4.10.0.84
+opt-einsum==3.3.0
+packaging==24.1
+pillow==10.4.0
+pip==24.3.1
+proto-plus==1.25.0
+protobuf==4.25.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycparser==2.22
+pydantic==2.9.2
+pydantic_core==2.23.4
+pyparsing==3.1.4
+python-dateutil==2.9.0.post0
+pytz==2024.2
+PyYAML==6.0.2
+requests==2.32.3
+rsa==4.9
+scipy==1.14.1
+setuptools==75.6.0
+six==1.16.0
+sniffio==1.3.1
+sockets==1.0.0
+socks==0
+sounddevice==0.5.0
+sqlparse==0.5.1
+tqdm==4.67.0
+typing_extensions==4.12.2
+tzdata==2024.2
+uritemplate==4.1.1
+urllib3==2.2.3
+wheel==0.45.1
+
