--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,6 @@ services:
     command: bash -c "python manage.py makemigrations && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
     container_name: django-polyteacher-web
     volumes:
-      - .:/polyteacher
+      - .:/app
     ports:
       - "8000:8000"
